--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -49,26 +49,6 @@
   --brand-90a: #{adjust-color($brand, $alpha: -0.1)};
   --brand-95a: #{adjust-color($brand, $alpha: -0.05)};
 
-  --spotify: #{$green};
-
-  // Accent coloured buttons
-  --button-filled-brand-border: #{darken($brand, math.div(5%, 2))};
-  --button-filled-brand-text: #{$crust};
-  --button-filled-brand-background: #{$brand};
-  --button-filled-brand-background-hover: #{darken($brand, math.div(15%, 2))}; // TODO: Upcoming palette tints/shades
-  --button-filled-brand-background-active: #{darken($brand, math.div(25%, 2))};
-
-  --button-filled-brand-inverted-text: #{$crust};
-  --button-filled-brand-inverted-background: #{$text};
-  --button-filled-brand-inverted-background-hover: #{darken(
-      $text,
-      math.div(15%, 2)
-    )};
-  --button-filled-brand-inverted-background-active: #{darken(
-      $text,
-      math.div(25%, 2)
-    )};
-
   --header-primary: #{$text} !important;
   --header-secondary: #{$subtext0} !important;
   --__header-bar-background: #{$mantle} !important;
@@ -78,6 +58,7 @@
   --text-muted: #{$subtext0} !important;
   --text-link: #{$blue} !important;
   --text-link-low-saturation: #{$sapphire};
+  --text-low-contrast: #{$overlay1};
   --text-positive: #{$green};
   --text-warning: #{$yellow};
   --text-danger: #{$red};
@@ -102,7 +83,11 @@
   --message-reacted-background: #{adjust-color($brand, $alpha: -0.7)} !important;
   --message-reacted-text: #{$brand};
 
+  --opacity-blurple-8: #{adjust-color($brand, $alpha: -0.92)};
   --opacity-blurple-16: #{adjust-color($brand, $alpha: -0.84)};
+  --opacity-blurple-24: #{adjust-color($brand, $alpha: -0.76)};
+  --opacity-blurple-32: #{adjust-color($brand, $alpha: -0.68)};
+  --opacity-blurple-60: #{adjust-color($brand, $alpha: -0.4)};
   --blurple-50: #{$brand};
 
   --background-primary: #{$base} !important;
@@ -187,6 +172,7 @@
   --yellow-360: #{$yellow};
   --yellow-300: #{$yellow};
   --red-400: #{$red};
+  --red-430: #{darken($red, 10%)};
   --red-500: #{darken($red, 15%)};
 
   --primary-100: #{$subtext1};
@@ -286,6 +272,23 @@
   --button-outline-primary-text-active: #{$base};
   --button-outline-primary-border-active: #{darken($surface2, math.div(5%, 2))};
 
+  // Accent coloured buttons
+  --button-filled-brand-text: #{$crust};
+  --button-filled-brand-background: #{$brand};
+  --button-filled-brand-background-hover: #{darken($brand, math.div(15%, 2))}; // TODO: Upcoming palette tints/shades
+  --button-filled-brand-background-active: #{darken($brand, math.div(25%, 2))};
+
+  --button-filled-brand-inverted-text: #{$crust};
+  --button-filled-brand-inverted-background: #{$text};
+  --button-filled-brand-inverted-background-hover: #{darken(
+      $text,
+      math.div(15%, 2)
+    )};
+  --button-filled-brand-inverted-background-active: #{darken(
+      $text,
+      math.div(25%, 2)
+    )};
+
   --modal-background: #{$base} !important;
   --modal-footer-background: #{$crust};
 
@@ -343,9 +346,9 @@
   --deprecated-card-bg: #{adjust-color($crust, $alpha: -0.4)};
   --deprecated-card-editable-bg: #{adjust-color($crust, $alpha: -0.7)};
 
-  --bg-mod-faint: #{adjust-color($base, $alpha: -0.9)};
-  --bg-mod-subtle: #{adjust-color($base, $alpha: -0.75)} !important;
-  --bg-mod-strong: #{adjust-color($base, $alpha: -0.55)} !important;
+  --bg-mod-faint: #{adjust-color($surface2, $alpha: -0.9)};
+  --bg-mod-subtle: #{adjust-color($surface2, $alpha: -0.75)} !important;
+  --bg-mod-strong: #{adjust-color($surface2, $alpha: -0.55)} !important;
 
   --deprecated-text-input-bg: #{$crust};
   --deprecated-text-input-border: #{adjust-color($crust, $alpha: -0.7)};
@@ -374,6 +377,7 @@
 
   --twitch: #{darken($mauve, 10%)};
   --playstation: #{darken($blue, 10%)};
+  --spotify: #{$green};
 
   --notice-background-critical: #{$red};
   --notice-background-info: #{$blue};
